--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>minhho89</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk=" crossorigin="anonymous" />
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="fixed.css">
@@ -156,8 +155,8 @@
         <div class="col-xs-12 col-sm-3">
             <div class="card">
                 <div class="card-body">
-                    <h5 class="card-title">Travel style</h5>
-                        <p class="card-text">Bagbacker</p>
+                    <h5 class="card-title">Travelled Nation</h5>
+                        <p class="card-text">8</p>
                 </div>
             </div>
         </div>
@@ -165,11 +164,52 @@
     <!-- End Fun Fact section -->
     
     <!-- Start Footer -->
+    <footer>
+        <div class="row justify-content-center">
+            <div class="col-sx-12 col-sm-4">&nbsp</div>
+            <div class="col-sx-12 col-sm-4">
+                <h4>minh.ho89</h4>
+                <ul>
+                    <li>
+                        <a href="#home" class="nav-link">home</a>
+                    </li>
+                    <li>
+                        <a href="#about" class="nav-link">about</a>
+                    </li> 
+                    <li>
+                        <a href="#skills" class="nav-link">resume</a>
+                    </li> 
+                    <li>
+                        <a href="#experience" class="nav-link">experience</a>
+                    </li> 
+                    <li>
+                        <a href="#porfilio" class="nav-link">porfilio</a>
+                    </li> 
+                    <li>
+                        <a href="#contact" class="nav-link">contact</a>
+                    </li>        
+                </ul>
+            </div>
+            <div class="col-sx-12 col-sm-4">
+                <h4>Contact Info</h4>
+                <p>Email: minhhnfx03283@funix.edu.vn</p>
+                <p>(777)777-7777</p>
+                <div>
+                    <a href="" target="_blank"><i class="fab fa-facebook-square"></i></a>
+                    <a href="" target="_blank"><i class="fab fa-twitter-square"></i></a>
+                    <a href="" target="_blank"><i class="fab fa-instagram"></i></a>
+                </div>
+            </div>
+            <hr class="socket">
+            &copy; minh.ho89 2020. A personal CV Website.
+        </div>
+    </footer>
     <!-- End footer -->
-        <!-- Script Source Files -->
-        <script src="js/jquery-3.3.1.min.js"></script>
-        <script src="bootstrap-4.1.3-dist/js/bootstrap.min.js"></script>
-        <script src="https://use.fontawesome.com/releases/v5.5.0/js/all.js"></script>
-        <!-- End of Script Source Files -->
+            <!-- Script Source Files -->
+
+    <script src="js/jquery-3.3.1.min.js"></script>
+    <script src="bootstrap/js/bootstrap.min.js"></script>
+    <script src="https://use.fontawesome.com/releases/v5.5.0/js/all.js"></script>
+    <!-- End of Script Source Files -->
 </body>
 </html>
