--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
 
-            <div class="collpase navbar-collapse" id="navbarResponsive">
+            <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-dauto">
                     <li class="nav-item">
                         <a href="#home" class="nav-link">home</a>
