--- a/index.html
+++ b/index.html
@@ -24,19 +24,16 @@
                         <a href="#home" class="nav-link">home</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#about" class="nav-link">about</a>
+                        <a href="pages/about.html" class="nav-link">about</a>
 
                     <li class="nav-item">
-                        <a href="#skills" class="nav-link">resume</a>
+                        <a href="pages/resume.html" class="nav-link">resume</a>
 
                     <li class="nav-item">
-                        <a href="#experience" class="nav-link">experience</a>
+                        <a href="pages/porfilio.html" class="nav-link">porfilio</a>
 
                     <li class="nav-item">
-                        <a href="#porfilio" class="nav-link">porfilio</a>
-
-                    <li class="nav-item">
-                        <a href="#contact" class="nav-link">contact</a>
+                        <a href="pages/contact.html" class="nav-link">contact</a>
        
                 </ul>
             </div>
