--- a/pages/resume.html
+++ b/pages/resume.html
@@ -90,9 +90,9 @@
     <!-- End footer -->
             <!-- Script Source Files -->
 
-    <script src="js/jquery-3.3.1.min.js"></script>
-    <script src="bootstrap/js/bootstrap.min.js"></script>
-    <script src="https://use.fontawesome.com/releases/v5.10.1/js/all.js"></script>
+            <script src="../js/jquery-3.3.1.min.js"></script>
+            <script src="../bootstrap/js/bootstrap.min.js"></script>
+            <script src="https://use.fontawesome.com/releases/v5.10.1/js/all.js"></script>
     <!-- End of Script Source Files -->
 </body>
 </html>
