--- a/index.html
+++ b/index.html
@@ -39,19 +39,41 @@
             </div>
         </nav> <!-- End of Navigation -->
 
-          <!-- Start Landing Page Section -->
-          <div class="landing">
-            <div class="home-wrap">
-                <div class="home-inner">
-                </div>
+          <!-- Start Carousel Page Section -->
+          <div id="carouselHome" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carouselHome" data-slide-to="0" class="active"></li>
+              <li data-target="#carouselHome" data-slide-to="1"></li>
+              <li data-target="#carouselHome" data-slide-to="2"></li>
+              <li data-target="#carouselHome" data-slide-to="3"></li>
+              <li data-target="#carouselHome" data-slide-to="4"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="img/phongcanh/hue.jpg" class="d-block w-100 h-100vh" alt="SongHuong">
+              </div>
+              <div class="carousel-item">
+                <img src="img/phongcanh/topaz.jpg" class="d-block w-100 h-100vh" alt="TopazHome">
+              </div>
+              <div class="carousel-item">
+                <img src="img/phongcanh/nagano.JPG" class="d-block w-100 h-100vh" alt="NaganoWalk">
+              </div>
+              <div class="carousel-item">
+                <img src="img/phongcanh/phanthiet.JPG" class="d-block w-100 h-100vh" alt="PhanThiet">
+              </div>
+              <div class="carousel-item">
+                <img src="img/phongcanh/disneyland.JPG" class="d-block w-100d-block w-100 h-100vh" alt="Disneyland">
+              </div>
             </div>
-        </div>
+          </div>
+
+
         <div class="caption text-center">
             <h3>hello! This is</h3>
             <h1>Nhat-Minh HO</h1>
             <a href="#home" class="btn btn-outline-light btn-lg">Download CV</a>
         </div>
-        <!-- End Landing Page Section -->
+        <!-- End Carousel  Page Section -->
 
     </div>
     <!--End Home-->
