--- a/pages/contact.html
+++ b/pages/contact.html
@@ -30,7 +30,7 @@
                     <a href="resume.html" class="nav-link active">resume</a>
                 </li>
                 <li class="nav-item">
-                    <a href="porfillio.html" class="nav-link">porfilio</a>
+                    <a href="porfilio.html" class="nav-link">porfilio</a>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link active">contact</a>
