--- a/pages/porfilio.html
+++ b/pages/porfilio.html
@@ -62,19 +62,21 @@
         <div class="row">
             <div class="card-group">
                 <div class="card">
-                    <img class="card-img-top" data-src="holder.js/100x180/" alt="Card image cap">
+                    <img src="..//img/hero.jpg" class="card-img-top" alt="creave">
                     <div class="card-body">
-                        <h4 class="card-title">Title</h4>
-                        <p class="card-text">Text</p>
+                      <h5 class="card-title">Creave Inc</h5>
+                      <p class="card-text">A simple website using HTML, CSS and Bootstrap with fully responsive.</p>
+                      <a href="https://minhho89.github.io/funix-web-pj3/Project3" target="_blank" class="btn btn-primary">Click to go</a>
                     </div>
-                </div>
-                <div class="card">
-                    <img class="card-img-top" data-src="holder.js/100x180/" alt="Card image cap">
+                  </div>
+                  <div class="card">
+                    <img src="../img/DuLichCT.JPG" class="card-img-top" alt="Du lich CT">
                     <div class="card-body">
-                        <h4 class="card-title">Title</h4>
-                        <p class="card-text">Text</p>
+                      <h5 class="card-title">Can Tho Travel Guide</h5>
+                      <p class="card-text">A quick guide to travel to Can Tho City.</p>
+                      <a href="https://docs.google.com/presentation/d/1rq8ax92DZjhb63e-IyoGGX_wLMYAjrgNeZ7cePOLWTQ/present?slide=id.p" target="_blank" class="btn btn-primary">Click to Go</a>
                     </div>
-                </div>
+                  </div>
             </div>
         </div>
         
