--- a/pages/resume.html
+++ b/pages/resume.html
@@ -6,6 +6,7 @@
     <title>minhho89</title>
     <link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="resume-style.css">
     <link rel="stylesheet" href="../fixed.css">
     
 </head>
