--- a/pages/contact.html
+++ b/pages/contact.html
@@ -68,7 +68,7 @@
                             </div>
                             <div class="row">
                                 <div class="col mt-2">
-                                <textarea class="form-control" id="FormControl" rows="3"></textarea>
+                                <textarea class="form-control" id="FormControl" rows="3" placeholder="Your message"></textarea>
                                 </div>
                             </div>
                             <div class="text-center">
@@ -113,9 +113,9 @@
                         <div>
                             <h4>Contact</h4>
                             <p>minhhnfx03283@funix.edu.vn</p>
-                            <a href="" target="_blank"><i class="fab fa-facebook-square"></i></a>
-                            <a href="" target="_blank"><i class="fab fa-twitter-square"></i></a>
-                            <a href="" target="_blank"><i class="fab fa-instagram"></i></a>
+                            <a href="#" target="_blank"><i class="fab fa-facebook-square"></i></a>
+                            <a href="#" target="_blank"><i class="fab fa-twitter-square"></i></a>
+                            <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
                         </div>
                     </div>
                 </div>
